Add assets and update personal portfolio page
Added image and SVG assets for profile and technologies. Updated index.html with new title, profile image, social icons, technology section, and footer. Created an empty styles.css for future styling.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Kvinjr9</title>
   </head>
   <body>
     <header>
       <nav>
-        <img src="" alt="mi cara" />
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Sobre mi</a></li>
@@ -18,19 +17,47 @@
       </nav>
     </header>
     <section>
+      <img
+        src="/assets/img/Imagen de WhatsApp 2025-11-21 a las 22.01.01_253795fc.jpg"
+        width="200px"
+        ="mi cara"
+      />
       <h1>Hola soy <strong>Kevin Rey</strong></h1>
-      <p>Programador Full stack  y ingeniero en sistemas</p>
+      <p>Programador Full stack y ingeniero en sistemas</p>
+      <div>
+        <img src="/assets/svg/linkedin-1-svgrepo-com.svg" width="50px" alt="" />
+        <img src="/assets/svg/github-142-svgrepo-com.svg" width="50px" alt="" />
+      </div>
     </section>
     <section>
       <h3>Quien soy</h3>
       <p>
-        Soy desarrollador web en formacion y estudiante de ingenieria de sistemas con enfoque en el desarrollo de aplicaciones modernas usando diferentes tecnologias 
-        y tambien creando aplicaciones para gestiones administrativas de diferentes sectores, me considero una persona proactiva, responsable y orientada en aprendizaje continuo. <br>
-        Actualmente me encuentro fortaleciondo mis habilidades de desarrolo web, inteligencia artifical y quiero llevar mis conosimientos a proyectos reales para asi aportar a la comunidad tecnologica  
+        Soy desarrollador web en formacion y estudiante de ingenieria de
+        sistemas con enfoque en el desarrollo de aplicaciones modernas usando
+        diferentes tecnologias y tambien creando aplicaciones para gestiones
+        administrativas de diferentes sectores, me considero una persona
+        proactiva, responsable y orientada en aprendizaje continuo. <br />
+        Actualmente me encuentro fortaleciondo mis habilidades de desarrolo web,
+        inteligencia artifical y quiero llevar mis conosimientos a proyectos
+        reales para asi aportar a la comunidad tecnologica
       </p>
     </section>
     <section>
-      
+      <h3>Tecnologias</h2>
+      <div>
+        <h4>Frontend & Backend</h3>
+        <img src="/assets/svg/css-3-svgrepo-com.svg" width="50px" alt="" />
+        <img src="/assets/svg/html-svgrepo-com.svg" width="50px" alt="" />
+        <img src="/assets/svg/js-svgrepo-com.svg" width="50px" alt="" />
+        <img src="/assets/svg/typescript-official-svgrepo-com.svg" width="50px" alt="" />
+        <img src="/assets/svg/react-svgrepo-com.svg" width="50px" alt="" />
+      </div>
     </section>
+    <footer>
+        <button>WhatsApp</button>
+        <button>Correo</button>
+        <button>LinkedIn</button>
+        <p>© 2025 Kevin Rey. Hecho con café y código. Derechos reservados.</p>
+    </footer> 
   </body>
 </html>
