Add CSS styling and update HTML structure
Linked the new styles.css file and applied CSS classes to header, section, and images for improved layout and appearance. Enhanced HTML structure to support new styles and added minor content adjustments.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kvinjr9</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header class="container_Header">
       <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
@@ -16,15 +17,15 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <img
+    <section class="container_I">
+      <img class="foto"
         src="/assets/img/Imagen de WhatsApp 2025-11-21 a las 22.01.01_253795fc.jpg"
-        width="200px"
+        
         ="mi cara"
       />
       <h1>Hola soy <strong>Kevin Rey</strong></h1>
-      <p>Programador Full stack y ingeniero en sistemas</p>
-      <div>
+      <p>Programador  Full stack y ingeniero en sistemas</p>
+      <div class="container_svg">
         <img src="/assets/svg/linkedin-1-svgrepo-com.svg" width="50px" alt="" />
         <img src="/assets/svg/github-142-svgrepo-com.svg" width="50px" alt="" />
       </div>
