Update homepage header styling and structure
Modified the main heading in index.html to include styled brackets and updated the CSS to add .keyname and adjust strong element colors. These changes enhance the visual emphasis on the name and improve overall header presentation.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="container_items">
-        <h1>Hola Soy <strong>Kevin Rey</strong></h1>
+        <h1><span class="keyname">[</span>Hola Soy: <strong class="name">Kevin Rey</strong><span class="keyname">]</span></h1>
         <p>Programador Full stack y ingeniero en sistemas</p>
       
         <img class="svg" src="/assets/svg/linkedin-1-svgrepo-com.svg" width="50px" alt="" />
