--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="container_items">
-        <h1><span class="keyname">[</span>Hola Soy: <strong class="name">Kevin Rey</strong><span class="keyname">]</span></h1>
+        <h1><span class="keyname">[</span>Hi, I'm: <strong class="name">Kevin Rey</strong><span class="keyname">]</span></h1>
         <p>Programador Full stack y ingeniero en sistemas</p>
       
         <img class="svg" src="/assets/svg/linkedin-1-svgrepo-com.svg" width="50px" alt="" />
